# terminal-rain

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: drop.h  rain.h  random.h  terminal.h
src/: drop.cpp  main.cpp  rain.cpp  terminal.cpp
tests/: CMakeLists.txt  drop_tests.cpp  rain_tests.cpp
